more changes and video section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="#vision" class="nav-link"><i class="fas fa-lightbulb"></i> <span>Visión</span></a></li>
             <li><a href="#publications" class="nav-link"><i class="fas fa-book"></i> <span>Publicaciones</span></a></li>
             <li><a href="#leadership" class="nav-link"><i class="fas fa-award"></i> <span>Liderazgo</span></a></li>
+            <li><a href="#videos" class="nav-link"><i class="fas fa-video"></i> <span>Videos</span></a></li>
             <li><a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> <span>Contacto</span></a></li>
         </ul>
         <!-- <div class="social-nav">
@@ -77,56 +78,6 @@
                     <p>El Dr. Héctor A. Ríos Maury es Catedrático en Gerencia y Comercio Internacional en la Facultad de Administración de Empresas del Recinto de Río Piedras de la Universidad de Puerto Rico (UPR). En su carrera universitaria ha sido, además, entre otras cosas, Director Académico, Decano, Director de la Editorial de la UPR y Rector en universidades estatales y privadas. Ha dirigido alrededor de 30 tesis de MBA. Ostenta la clasificación académica Scholarly Practitioner (Facultativo Perito/ Experimentado) que es un rango de grado óptimo y elevado otorgado dentro de los procesos de las acreditaciones académicas de la Facultad a la que pertenece.</p>
                     <p>Ríos Maury ha estudiado en universidades de Puerto Rico (UPR), Estados Unidos Continentales (Universidad de Memphis, Universidad de Carolina del Sur, Universidad de Nueva York), España (Universidad Complutense) y Francia (Universidad de Estrasburgo).</p>
                     <p>Es autor o co autor de 7 libros (el más reciente: Privatización en la Globalización y ensayos de geopolítica, Ediciones Sin Papel y Sin Tinta, Bogotá/San Juan, marzo 2025), decenas de artículos profesionales y más de 250 columnas de opinión. Ha sido conferenciante y profesor invitado y visitante en universidades de: Estados Unidos, Europa, África, Latinoamérica y El Caribe. Es también consultor organizacional y analista en radio y televisión.</p>
-                </div>
-            </div>
-            <div class="personal-carousel-container">
-                <h3>Galería Personal</h3>
-                <div class="personal-carousel">
-                    <div class="carousel-slides">
-                        <div class="carousel-slide active">
-                            <img src="images/personal-images/image1.jpg" alt="Dr. Ríos Maury - Imagen 1">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image2.jpg" alt="Dr. Ríos Maury - Imagen 2">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image3.jpg" alt="Dr. Ríos Maury - Imagen 3">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image4.jpg" alt="Dr. Ríos Maury - Imagen 4">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image5.jpg" alt="Dr. Ríos Maury - Imagen 5">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image6.jpeg" alt="Dr. Ríos Maury - Imagen 6">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image7.jpg" alt="Dr. Ríos Maury - Imagen 7">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image8.jpeg" alt="Dr. Ríos Maury - Imagen 8">
-                        </div>
-                        <div class="carousel-slide">
-                            <img src="images/personal-images/image9.jpeg" alt="Dr. Ríos Maury - Imagen 9">
-                        </div>
-                    </div>
-                    <div class="carousel-controls">
-                        <button class="carousel-control prev"><i class="fas fa-chevron-left"></i></button>
-                        <div class="carousel-indicators">
-                            <span class="indicator active" data-slide="0"></span>
-                            <span class="indicator" data-slide="1"></span>
-                            <span class="indicator" data-slide="2"></span>
-                            <span class="indicator" data-slide="3"></span>
-                            <span class="indicator" data-slide="4"></span>
-                            <span class="indicator" data-slide="5"></span>
-                            <span class="indicator" data-slide="6"></span>
-                            <span class="indicator" data-slide="7"></span>
-                            <span class="indicator" data-slide="8"></span>
-                            <span class="indicator" data-slide="9"></span>
-                        </div>
-                        <button class="carousel-control next"><i class="fas fa-chevron-right"></i></button>
-                    </div>
                 </div>
             </div>
         </section>
@@ -252,7 +203,7 @@
                     Todo esto y mucho más es <a href="http://riosmaurypresidenteupr.info/files/Plan_de_Trabajo.pdf">UPR: UNA TRANSFORMACIÓN INNOVADORA PARA PROMOVER EL DESARROLLO DE PUERTO RICO</a> teniendo como norte la excelencia académica.
                 </p>
                 <p style="font-style: italic; font-size: 1.3rem;">
-                    Si solamente haces lo que simepre has hecho, no llegarás más lejos de donde siempre has llegado.
+                    Si solamente haces lo que siempre has hecho, no llegarás más lejos de donde siempre has llegado.
                 </p>
             </div>
 
@@ -429,9 +380,92 @@
             </div>
         </section>
 
+        
+
+        <!-- Personal Carousel Section -->
+        <section id="personal-carousel" class="section publications-section">
+            <div class="personal-carousel-container">
+                <h3>Galería Personal</h3>
+                <div class="personal-carousel">
+                    <div class="carousel-slides">
+                        <div class="carousel-slide active">
+                            <img src="images/personal-images/image1.jpg" alt="Dr. Ríos Maury - Imagen 1">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image2.jpg" alt="Dr. Ríos Maury - Imagen 2">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image3.jpg" alt="Dr. Ríos Maury - Imagen 3">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image4.jpg" alt="Dr. Ríos Maury - Imagen 4">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image5.jpg" alt="Dr. Ríos Maury - Imagen 5">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image6.jpeg" alt="Dr. Ríos Maury - Imagen 6">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image7.jpg" alt="Dr. Ríos Maury - Imagen 7">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image8.jpeg" alt="Dr. Ríos Maury - Imagen 8">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="images/personal-images/image9.jpeg" alt="Dr. Ríos Maury - Imagen 9">
+                        </div>
+                    </div>
+                    <div class="carousel-controls">
+                        <button class="carousel-control prev"><i class="fas fa-chevron-left"></i></button>
+                        <div class="carousel-indicators">
+                            <span class="indicator active" data-slide="0"></span>
+                            <span class="indicator" data-slide="1"></span>
+                            <span class="indicator" data-slide="2"></span>
+                            <span class="indicator" data-slide="3"></span>
+                            <span class="indicator" data-slide="4"></span>
+                            <span class="indicator" data-slide="5"></span>
+                            <span class="indicator" data-slide="6"></span>
+                            <span class="indicator" data-slide="7"></span>
+                            <span class="indicator" data-slide="8"></span>
+                            <span class="indicator" data-slide="9"></span>
+                        </div>
+                        <button class="carousel-control next"><i class="fas fa-chevron-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+         <!-- Videos Section -->
+         <section id="videos" class="section videos-section">
+            <div class="section-header">
+                <h2>Videos</h2>
+                <p class="section-subtitle">Conferencias, entrevistas y presentaciones destacadas</p>
+            </div>
+            <div class="videos-grid">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/7GadN_7emUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/xMJOj9DGBGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/eunDj4VM1NQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/8oHGAIkECi8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/7GadN_7emUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/Px3TxREojGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
         <!-- Contact Section - Enhanced -->
-        <section id="contact" class="section contact-section">
+        <section id="contact" class="section">
             <div class="section-header">
                 <h2>Sugerencias y Comentarios</h2>
                 <p class="section-subtitle">Póngase en contacto para discutir oportunidades de liderazgo académico y colaboración</p>
@@ -459,6 +493,7 @@
                 </form>
             </div>
         </section>
+
     </main>
 
     <!-- Footer -->
